# youbot_mechatroniklabor

./: .gitignore  README.md
docs/: dokumentation.docx
oberstufenlabor_mechatronik_camera_calibration/: CMakeLists.txt  package.xml
oberstufenlabor_mechatronik_camera_calibration/include/oberstufenlabor_mechatronik_camera_calibration/: cameracalibration.h  cameracalibration_qtros.h  cameracalibration_window.h
oberstufenlabor_mechatronik_camera_calibration/launch/: exercise01_camera_calibration.launch
oberstufenlabor_mechatronik_camera_calibration/resources/: head_camera.yaml
oberstufenlabor_mechatronik_camera_calibration/src/: cameracalibration.cpp  cameracalibration_node.cpp  cameracalibration_qtros.cpp  cameracalibration_window.cpp
oberstufenlabor_mechatronik_camera_calibration/ui/: cameracalibration_window.ui
oberstufenlabor_mechatronik_robot/: CMakeLists.txt  package.xml
oberstufenlabor_mechatronik_robot/action/: CollectBalls.action
oberstufenlabor_mechatronik_robot/cfg/: calibration_params.yaml  map_small.pgm  map_small.yaml  params.yaml
oberstufenlabor_mechatronik_robot/include/oberstufenlabor_mechatronik_robot/: calibration_node.h  exercise04_collector_server.h  exercise04_collector_server_studis.h  exercise04_gripper_test.h  exercise04_gripper_test_studis.h
oberstufenlabor_mechatronik_robot/launch/: base_system.launch  calibration.launch  collector_server.launch  driver.launch  gripper_test.launch  navigation.launch  vision.launch
oberstufenlabor_mechatronik_robot/poses/: neighbors.yaml  poses.yaml
oberstufenlabor_mechatronik_robot/src/oberstufenlabor_mechatronik_robot/: calibration_node.cpp  exercise04_collector_node.cpp  exercise04_collector_server.cpp  exercise04_collector_server_studis.cpp  exercise04_gripper_test.cpp  exercise04_gripper_test_studis.cpp
oberstufenlabor_mechatronik_vision/: CMakeLists.txt  package.xml
oberstufenlabor_mechatronik_vision/config/: morph.yaml  morph_studis.yaml  parameter.yaml  parameter_studis.yaml
oberstufenlabor_mechatronik_vision/include/oberstufenlabor_mechatronik_vision/: exercise02_library.h  exercise03.h
oberstufenlabor_mechatronik_vision/launch/: exercise02.launch  exercise03.launch
oberstufenlabor_mechatronik_vision/msg/: Circle.msg
oberstufenlabor_mechatronik_vision/src/: exercise02_library.cpp  exercise02_library_studis.cpp  exercise02_node.cpp  exercise03.cpp  exercise03_studis.cpp
oberstufenlabor_mechatronik_vision/srv/: SetColor.srv
