<?xml version="1.0"?>
<package>
  <name>oberstufenlabor_mechatronik_robot</name>
  <version>0.9.9</version>
  <description>
  Oberstufenlabor Mechatronik - Versuch: Bildrückgeführte Regelung am Beispiel des youBots
  Robot Package
  </description>

  <maintainer email="florian.koehler@gmx.net">Florian Köhler</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>luh_youbot_manipulation_api</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>luh_youbot_msgs</build_depend>
  <build_depend>oberstufenlabor_mechatronik_vision</build_depend>
  <build_depend>luh_youbot_poses</build_depend>
  <build_depend>qt_build</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>luh_youbot_manipulation_api</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>luh_youbot_msgs</run_depend>
  <run_depend>oberstufenlabor_mechatronik_vision</run_depend>
  <run_depend>luh_youbot_poses</run_depend>
  <run_depend>imes_navigation</run_depend>
  <run_depend>luh_youbot_manipulation</run_depend>
  <run_depend>youbot_driver</run_depend>
  <run_depend>youbot_launch</run_depend>

</package>
