<?xml version="1.0"?>
<package>
  <name>oberstufenlabor_mechatronik_vision</name>
  <version>0.9.9</version>
  <description>
  Oberstufenlabor Mechatronik - Versuch: Bildrückgeführte Regelung am Beispiel des youBots
  Vision Package
  </description>

  <maintainer email="florian.koehler@gmx.net">Florian Köhler</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>imes_cv</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>luh_youbot_manipulation_api</build_depend>
  <build_depend>luh_youbot_poses</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>imes_cv</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>luh_youbot_manipulation_api</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>luh_youbot_poses</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
